call-center/src/objects/Patient_Coverage_Junction__c.object
<CustomObject>
    <description>Junction object to create many-to-many relationship between Patients and Coverages</description>
    <fields>
        <fullName>Coverage__c</fullName>
        <label>Coverage</label>
        <referenceTo>Coverage__c</referenceTo>
        <relationshipLabel>Patient Coverage Junctions</relationshipLabel>
        <relationshipName>Patient_Coverage_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Patient</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Patient Coverage Junctions</relationshipLabel>
        <relationshipName>Patient_Coverage_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sirono_Id__c</fullName>
        <externalId>true</externalId>
        <label>Sirono ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Patient Coverage Junction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCJ-{YYYY}{MM}-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Coverage Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>